web/themes/custom/union_marketing/scss/components/_page-banner.scss
.term--view-mode-full .cu-banner--page,
.collection--view-mode-full .cu-banner--page,
.collection--view-mode-banner .cu-banner--page,
.node--view-mode-full .cu-banner--page,
.node--view-mode-banner .cu-banner--page {
  --banner-padding: 20px;
  --frame-width: 10px;

  padding: var(--banner-padding);
  margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr2));
  margin-left: calc(var(--gutter-width) * -1);
  margin-right: calc(var(--gutter-width) * -1);

  @include breakpoint(md) {
    --banner-padding: 50px;
    --frame-width: 15px;
    margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr3));
    margin-left: 0;
    margin-right: 0;
  }

  .cu-banner__media::before {
    background: rgba(0,0,0,0.75);

    @include breakpoint(md) {
      background: linear-gradient(90deg, rgba(0,0,0,0.75) 25%, rgba(0,0,0,0) 100%);
    }
  }

  .cu-banner__content {
    max-width: unset;
    overflow-wrap: break-word;

    @include breakpoint(sm) {
      overflow-wrap: normal;
    }

    &::after {
      content: '';
      height: 50px;
      width: var(--frame-width);
      position: absolute;
      right: 0;
      bottom: 0;
      background-color: white;

      @include breakpoint(md) {
        height: 80px;
      }

      @include breakpoint(lg) {
        height: 100px;
      }
    }
  }

  h1.cu-heading, h2.cu-heading {
    --cu-font-family: futura-pt;
    --cu-font-size: var(--cu-ms3);
    text-transform: uppercase;
    line-height: 1;

    @include breakpoint(md) {
      --cu-font-size: var(--cu-ms7);
    }

    @include breakpoint(lg) {
      --cu-font-size: var(--cu-ms10);
    }
  }

  .field-type--text-with-summary p:last-of-type {
    margin-bottom: 0;
  }

  .cu-page-nav {
    // .cu-page-nav__list already has the margin we want.
    margin-top: 0;

    .cu-heading {
      margin-bottom: 0;
    }
    .cu-page-nav__list {
      padding-bottom: 0;
    }
  }

  .cu-page-nav__link {
    text-shadow: black 0 0 4px;
  }

  .cu-breadcrumb {
    margin-top: 0;
  }

  &.cu-banner--with-media {
    @include breakpoint(md) {
      .banner__content {
        display: flex;
        flex-direction: column;
        min-height: 365px;


        div[class$="ilr-section-navigation"] {
          margin-top: auto;
          margin-right: -64%;
        }
      }
    }
  }
}

.term--view-mode-full .banner__content,
.collection--view-mode-full .banner__content,
.collection--view-mode-banner .banner__content,
.node--view-mode-full .banner__content,
.node--view-mode-banner .banner__content {
  border-left: var(--frame-width) solid white;
  border-bottom: var(--frame-width) solid white;
  padding: 0 10% var(--banner-padding) var(--banner-padding);

  @include breakpoint(md) {
    padding-right: 40%;
  }
}

.node--course .node--view-mode-full .cu-banner--page {
  // Override banner margin on course pages for register block/message.
  margin-bottom: 0;

  h1.cu-heading {
    --cu-font-family: revert;
    --cu-font-size: var(--cu-ms5);
    text-transform: unset;
  }
}

.node--view-mode-alt.node--wide,
.collection--view-mode-alt.collection--wide {
  --cu-max-width-section: revert;
  .cu-breadcrumb {
    .bvg--cornell-alternate-branding & {
      margin-top: 0;
    }
  }

  .cu-banner__content {
    max-width: revert;
  }

  .banner__content {
    max-width: revert;
    margin: var(--cu-vr2) auto var(--cu-vr2) auto;
    padding: var(--cu-vr2) 0 var(--cu-vr2) var(--cu-ps1);
    position: relative;
    border-left: 16px solid #222;

    @include breakpoint(sm) {
      padding: var(--cu-vr2) 0 var(--cu-vr2) var(--cu-ps2);
    }

    &::before,
    &:after {
      position: absolute;
      background: #222;
      content: '';
      z-index: 1;
      height: 16px;
      width: 100%;
    }

    &:before {
      top: 0;
      left: 0;
      width: 20%;
    }

    &:after {
      bottom: 0;
      left: 0;
      width: 40%;
    }

    .cu-heading {
      --cu-font-family: 'futura-pt';
      --cu-font-size: var(--cu-ms5);
      --cu-line-height: 1;
      text-transform: uppercase;
      margin-bottom: 0;

      @include breakpoint(sm) {
        --cu-font-size: var(--cu-ms10);
      }
    }

    .block-layout-builder {
      max-width: 915px;
    }

    p:last-of-type {
      margin-bottom: 0;
    }

    .block-field-block--node--page--title + .block-field-block--node--page--body {
      margin-top: var(--cu-vr0);
    }
  }

  .layout__region--content .cu-page-nav {
    max-width: 100%;
  }
}

.node--view-mode-alt,
.collection--view-mode-alt {
  --cu-max-width-section: 915px;

  .cu-banner--page {
    padding: 0;
  }

  .cu-banner__content {
    max-width: revert;
  }

  .banner__content {
    max-width: var(--cu-max-width-section, 1060px);
    margin: 0 auto;
    padding: var(--cu-vr1) 0 0;
  }

  h1.cu-heading {
    --cu-font-size: var(--cu-ms10);
    margin-bottom: var(--cu-vr1);
  }

  .field--body.field-type--text-with-summary {
    --cu-font-weight: 400;
  }

  .layout__region--content .cu-page-nav {
    margin-bottom: var(--cu-vr2);

    @include breakpoint(sm) {
      margin-bottom: var(--cu-vr3);
    }
  }
}

.term--view-mode-full .cu-banner--page ul,
.collection--view-mode-full .cu-banner--page ul,
.collection--view-mode-banner .cu-banner--page ul,
.node--view-mode-full .cu-banner--page ul {
  margin: var(--cu-vr2) 0 0;
  padding: 0 0 0.5rem;
  list-style: none;

  @include breakpoint(md) {
    display: flex;
    gap: var(--cu-ps2);

    &.cu-page-nav__list {
      align-items: end;
    }
  }

  li {
    --cu-accent-width: 40%;
    --cu-accent-margin: 0.75em 0 0 0;
    --cu-font-weight: 400;
    --cu-line-height: 1;

    &:last-child {
      margin: 0;
    }

    h4.cu-heading {
      --cu-font-size: var(--cu-ms0);
    }
  }

  ul {
    flex-direction: column;
    gap: var(--cu-vr-1);
    margin-top: var(--cu-vr1);

    li {
      --cu-font-size: var(--cu-ms-2);
      --cu-font-weight: 300;
      --cu-line-height: 1;

      a {
        text-decoration-style: dotted;
        display: block;
      }
    }
  }
}

.cu-page-nav--factoids {
  .cu-heading {
    --cu-font-size: var(--cu-ms6);
  }
  .cu-page-nav__list .cu-page-nav__item {
    --cu-accent-width: 20%;
    --cu-accent-margin: 0.5em 0 0 0;
  }
}

/* Usage example:
<div class="cu-page-nav cu-page-nav--factoids">
    <ul class="cu-page-nav__list">
      <li class="cu-page-nav__item">
        <h4 class="cu-heading">98%</h4>
        <p class="cu-text">Employed after graduation</p>
      </li>
      <li class="cu-page-nav__item">
        <h4 class="cu-heading">$85K</h4>
        <p class="cu-text">Average starting salary</p>
      </li>
      <li class="cu-page-nav__item">
        <h4 class="cu-heading">$10K</h4>
        <p class="cu-text">Average sign-on bonus</p>
      </li>
    </ul>
</div>
*/

.layout__region--content .cu-page-nav {
  margin: 0 auto;
  max-width: var(--cu-max-width-section, 1060px);
}

.layout__region--content .cu-page-nav__link {
  --cu-text-color: #{$black};
}

.cu-banner--page .layout-builder-block,
.cu-banner--page .layout-builder__add-block {
  background-color: rgba(0,0,0,0.2);
}

// Undo some of the styles that Union Banner adds for layout builder.
.layout-builder__layout.layout-banner .cu-banner--page {
  .cu-banner__media {
    position: relative;
    background: unset;
    pointer-events: unset;

    &::before {
      content: none;
    }

    :not(img):not(video) {
      display: revert;
    }

    .contextual-links {
      display: none;
    }

    .contextual.open .contextual-links {
      display: block;
    }
  }
}

